demo/src/main/java/com/example/demo/Errors/PKCS1KeyException.java
package com.example.demo.Errors;

public class PKCS1KeyException extends RuntimeException
{
    public PKCS1KeyException(String message) {
        super(message);
    }
}
